--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    :
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "jayo78"
-description              : "Posts about security, malware and programming"
+description              : ""
 url                      : https://jayo78.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -95,8 +95,8 @@ analytics:
 author:
   name             : "Jayson Hurst"
   avatar           : /assets/images/avatar.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "RE, Programming, Security<br>Student at UMD"
-  location         : "Philadelphia, PA"
+  bio              : "Programming & Hacking<br>CS Student at UMD"
+  location         : "Washington, DC"
   email            : jhurst1@terpmail.umd.edu
   links:
     - label: "LinkedIn"
